Fri Nov 17 14:52:37 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/acroconv.pl: Added external converter script to convert
	PDFs with acroread.

Mon Nov  6 12:13:13 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc (GetLocal, GetLocalUser): move String definition
	out of while statement for AIX xlC compiler.

Mon Oct 30 21:50:02 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Server.h, htdig/Server.cc (push): Add newDoc paramter that
	will allow redirects (old docs) to be followed and not count
	against the maxDoc restrictions.

	* htdig/Retriever.cc (got_redirect): Use new parameter so we don't
	count against a server's max documents since it's a redirect.

	* htlib/nl_types.h: Add for systems missing this header file.

Sun Oct 29 21:36:51 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/defaults.cc: Updated per-server and per-URL fields to
	match code. I still have a "wish list" of additional attributes
	that should work this way eventually.

	* htdoc/attrs.html, cf_by{name,prog}.html: Reran cf_generate.pl.

Sun Oct 22 17:13:08 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/HtWordList.h: Add missing include for stdlib.h needed for
	abort().

	* htsearch/BooleanQueryParser.cc (ParseAnd): Fix problems with RH7
	compiler -- shouldn't use "not" as a variable name!

Thu Oct 19 22:19:16 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* ltmain.sh, ltconfig: Update with versions from libtool
	1.3.5. which may fix some problems building libraries.

Mon Oct  9 21:59:11 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* */* [many, many files]: Backed out mifluz merge by going back on
	modified files to 091000 snapshot.

	* configure: Regenerated from configure.in.

	* */Makefile.in: Regenerated using automake.

Fri Oct  6 11:03:14 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (do_tag): Parse <object> tags properly, looking